<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_occupancy_tracking_example</name>
  <version>0.0.1</version>
  <description>ROS example using pointcloud voxelization in [voxelized_geometry_tools](github.com/calderpg.voxelized_geometry_tools) for occupancy tracking from pointclouds.</description>
  <maintainer email="calder.pg@gmail.com">Calder Phillips-Grafflin</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>common_robotics_utilities</depend>
  <depend>voxelized_geometry_tools</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
